@@ -1,5 +1,5 @@
 /*--------------------------------------------------------------------
- *	$Id: gmt_init.c,v 1.295 2007-08-21 19:58:44 guru Exp $
+ *	$Id: gmt_init.c,v 1.296 2007-08-22 18:57:35 guru Exp $
  *
  *	Copyright (c) 1991-2007 by P. Wessel and W. H. F. Smith
  *	See COPYING file for copying and redistribution conditions.
@@ -594,6 +594,7 @@ void GMT_label_syntax (int indent, int kind)
 	fprintf (stderr, "%s +a<angle> for annotations at a fixed angle, +an for line-normal, or +ap for line-parallel [Default]\n", pad);
 	if (kind == 0) fprintf (stderr, "%s   For +ap, optionally append u for up-hill and d for down-hill cartographic annotations\n", pad);
 	fprintf (stderr, "%s +c<dx>[/<dy>] to change the clearance between label and text box [15%%]\n", pad);
+	fprintf (stderr, "%s +d turns on debug which draws helpter points and lines\n", pad);
 	fprintf (stderr, "%s +f followed by desired label font [Default is %d].\n", pad, gmtdefs.annot_font[0]);
 	fprintf (stderr, "%s +g[<color>] for opaque text box [Default is transparent]; optionally give color [white]\n", pad);
 	fprintf (stderr, "%s +j<just> to set label justification [Default is CM]\n", pad);
@@ -609,6 +610,7 @@ void GMT_label_syntax (int indent, int kind)
 		fprintf (stderr, "%s   N Use current file number / multisegment number (starting at 0/0).\n", pad);
 		fprintf (stderr, "%s   x Like h, but scan headers in the <xfile.d> crossing lines instead.\n", pad);
 	}
+	fprintf (stderr, "%s +n<dx>[/<dy>] to nudge placement of label along line (+N for along x/y axis)\n", pad);
 	fprintf (stderr, "%s +o to use rounded rectangular text box [Default is rectangular]\n", pad);
 	fprintf (stderr, "%s +p[<pen>] draw outline of textbox  [Default is no outline]; optionally give pen [Default is default pen]\n", pad);
 	fprintf (stderr, "%s +r<min_rad> places no labels where radius of curvature < <min_rad> [Default is 0].\n", pad);
@@ -5433,6 +5435,7 @@ void GMT_extract_label (char *line, char *label)
 	int i = 0, j, j0;
 	char *p;
 
+	label[0] = '\0';	/* Remove previous label */
 	if ((p = strstr (line, " -L")) || (p = strstr (line, "	-L"))) 	/* Get label specified wih -L option */
 		i = p + 3 - line;
 	else {								/* Bypass whitespace and pick first word */
@@ -5440,7 +5443,7 @@ void GMT_extract_label (char *line, char *label)
 
 	}
 	if ((p = strchr (&line[i], '\"'))) {	/* Gave several words as label */
-		for (j0 = i, j = i + 1; line[j] != '\"'; j++);
+		for (j0 = j = i + 1; line[j] != '\"'; j++);
 		if (line[j] == '\"') {	/* Found the matching quote */
 			strncpy (label, &line[j0], j-j0);
 			label[j-j0] = '\0';
